# BraiinsRatchet

./: .env.example  .gitignore  PROGRAM.md  README.md  REBOOT_HANDOFF.md  SECURITY.md  START_HERE.md  config.example.toml  pyproject.toml  results.tsv
docs/: APP_DESIGN_RESEARCH.md  BRAIINS_PUBLIC_MARKET.md  CLI_REFERENCE.md  OPERATOR_GUIDE.md  RATCHET_OPERATIONS.md  USER_GUIDE.md
examples/: market_snapshot.example.json
macos/BraiinsRatchet/: Package.swift  README.md
macos/BraiinsRatchet/Sources/BraiinsRatchetMac/: BraiinsRatchetApp.swift
reports/: EXPERIMENT_LOG.md  retro-2026-04-25T16-35-00-00-00.md  retro-2026-04-25T19-08-00-00-00.md  run-20260427T135327Z-222826.md
scripts/: build_mac_app  generate_mac_icon.py  ratchet
src/braiins_ratchet/: __init__.py  automation.py  braiins.py  cli.py  config.py  engine.py  ev.py  experiments.py  guardrails.py  guidance.py  lifecycle.py  models.py  monitor.py  ocean.py  report.py  storage.py  strategy.py  watch_loop.py
tests/: test_automation.py  test_braiins_public.py  test_docs.py  test_engine.py  test_ev.py  test_experiments.py  test_guardrails.py  test_guidance.py  test_lifecycle.py  test_mac_app.py  test_monitor.py  test_ocean.py  test_report.py  test_storage.py  test_strategy.py  test_watch_loop.py
