[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "braiins-ratchet"
version = "0.1.0"
description = "Monitor-only ratchet strategy tooling for Braiins Hashpower and OCEAN mining."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
braiins-ratchet = "braiins_ratchet.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

